--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "homepage": "https://danielfep03.github.io/Mel",
+  "homepage": "https://www.melvonpato.com",
   "name": "mel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "uuid": "8.3.2",
+    "web-vitals": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +42,6 @@
   "devDependencies": {
     "eslint": "7.11.0",
     "eslint-plugin-react": "7.26.1",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "3.2.3"
   }
 }
