--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.melvonpato.com",
+  "homepage": "https://melvonpato.herokuapp.com",
   "name": "mel",
   "version": "0.1.0",
   "private": true,
