--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "eslint": "7.11.0",
     "eslint-plugin-react": "7.26.1",
     "gh-pages": "3.2.3"
+  },
+  "engines": {
+    "node": "14.18.1"
   }
 }
