--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://melvonpato.herokuapp.com",
+  "homepage": "https://danielfep03.github.io/Mel/",
   "name": "mel",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
     "uuid": "8.3.2",
     "web-vitals": "1.0.1"
   },
