Url package.json changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://danielfep03.github.io/Mel/",
+  "homepage": "https://melvonpato.herokuapp.com",
   "name": "mel",
   "version": "0.1.0",
   "private": true,
