--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MelVonPato",
-  "name": "MelVonPato Page",
+  "short_name": "MelBaudon",
+  "name": "MelBaudon Page",
   "icons": [
     {
       "src": "favicon.ico",
